# TMDB-CLI-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
tmdb_cli_tool/: cli.py  tmdb.py
